# aisd2024

./: .gitignore
1/: lab1.c  lab1func.c  lab1func.h  run
2/: CMakeLists.txt  deck.c  deck.h  lab2.c
3a/: CMakeLists.txt  lab3a.c  lab3afunc.c  lab3afunc.h  lab3alib.c  lab3alib.h  table.h
3b/: CMakeLists.txt  hash_table.h  hash_table_func.c  hash_table_func.h  hash_table_lib.c  hash_table_lib.h  main.c
4a/: CMakeLists.txt  bintree_dialog.c  bintree_dialog.h  bintree_lib.c  bintree_lib.h  bintree_struct.h  main.c
4b/: CMakeLists.txt  main.c  splay_tree_dialog.c  splay_tree_dialog.h  splay_tree_lib.c  splay_tree_lib.h  splay_tree_struct.h
5/: CMakeLists.txt  graph_dialog.c  graph_dialog.h  graph_lib.c  graph_lib.h  graph_struct.h  main.c  queue.c  queue.h
